@@ -17,6 +17,7 @@
       <separator/>
       <menuitem action="Find"/>
       <menuitem action="FindNext"/>
+      <menuitem action="FindPrev"/>
       <separator/>
       <menuitem action="Preferences"/>
     </menu>
