@@ -1,3 +1,10 @@
+2006-01-08  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-window.c: 
+	* data/ui/yelp-ui.xml: 
+	Patch from Christian Persch to cleanup some code and add
+	Find Previous Keybinding - bugs #304421 and #140632
+	
 2006-01-08  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-db-pager.c: (db_pager_parse), (walker_walk_xml):
